[gd_scene load_steps=3 format=3 uid="uid://cfgr4unswiis5"]

[ext_resource type="Script" path="res://Player/Weapons/whisk.gd" id="1_uo7my"]
[ext_resource type="Texture2D" uid="uid://dngdsx38wsj6o" path="res://Textures/Items/Weapons/whisk.png" id="2_4xjcu"]

[node name="Whisk" type="Node2D"]
script = ExtResource("1_uo7my")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3, 0)
scale = Vector2(0.00395415, 0.00395415)
texture = ExtResource("2_4xjcu")

[node name="Timer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
